# photobooth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  ruff.toml  tox.ini  typos.toml
deploy/: run-celery.sh  run-wsgi.sh
front/: README.md  index.html  index.js  package-lock.json  package.json  server.mjs
front/css/: main.css
photobooth/: apps.py  celery.py  common.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
photobooth/migrations/: 0001_initial.py  0002_auto_20181114_2108.py  0002_photo_photo_with_bg.py  0003_photo_datetime_str.py
photobooth/settings/: base.py  development.py  production.py
photobooth/templates/photobooth/: index.html
static/css/: main.css
static/js/: index.js
