[project]
name = "photobooth"
version = "1.0.0"
description = "Capitole du Libre Photobooth."
authors = [
    { name = "Clement Cavanier", email = "clement.cavanier@bleemeo.com" },
    { name = "Lionel Porcheron", email = "lionel.porcheron@bleemeo.com" },
    { name = "Pierre Fersing", email = "pierre.fersing@bleemeo.com" },
]
requires-python = "==3.12.*"
readme = "README.md"

dependencies = [
    "Django",
    "celery",
    "exif",
    "Pillow",
    "psycopg",
    "qrcode",
]

[dependency-groups]
dev = [
    "autopep8",
    "flake8",
    "tox",
]

[tool.uv]
package = false
